etc/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Thu Oct  3 08:53:56 2019
*nat
:PREROUTING ACCEPT [267:23846]
:INPUT ACCEPT [263:22343]
:OUTPUT ACCEPT [24:5737]
:POSTROUTING ACCEPT [12:814]
:SHADOWSOCKS - [0:0]
-A PREROUTING -p tcp -j SHADOWSOCKS
-A OUTPUT -p tcp -j SHADOWSOCKS
-A POSTROUTING -o enp2s0f0 -j MASQUERADE
-A SHADOWSOCKS -p tcp -m tcp --dport 6900 -j RETURN
-A SHADOWSOCKS -d 0.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 10.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 127.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 169.254.0.0/16 -j RETURN
-A SHADOWSOCKS -d 172.16.0.0/12 -j RETURN
-A SHADOWSOCKS -d 192.168.0.0/16 -j RETURN
-A SHADOWSOCKS -d 224.0.0.0/4 -j RETURN
-A SHADOWSOCKS -d 240.0.0.0/4 -j RETURN
-A SHADOWSOCKS -p tcp -j REDIRECT --to-ports 1081
COMMIT
# Completed on Thu Oct  3 08:53:56 2019
# Generated by iptables-save v1.6.1 on Thu Oct  3 08:53:56 2019
*filter
:INPUT ACCEPT [5498:2364163]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4171:1573826]
-A FORWARD -i ens9 -o enp2s0f0 -j ACCEPT
-A FORWARD -i enp2s0f0 -o ens9 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Thu Oct  3 08:53:56 2019
